[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Travis Horn <travis@travishorn.com>"]
description = "A simple hello world app using Rust and WebAssembly"
license = "MIT/Apache-2.0"
repository = "https://github.com/travishorn/hello-wasm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
